RV-714 added shifts header, fixed styles

--- a/src/app/dynamic-form/components/extend/extend.component.scss
+++ b/src/app/dynamic-form/components/extend/extend.component.scss
@@ -1,4 +1,6 @@
 .title {
+  margin-bottom: 22px;
+
   font-size: 32px;
   line-height: 36px;
 }
@@ -8,7 +10,20 @@
 }
 
 b {
+  position: relative;
+  top: -1px;
+
   font-size: 18px;
-  line-height: 20px;
+  line-height: 24px;
   font-weight: 600;
+}
+
+.shifts-header {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+
+  button {
+    margin-left: auto;
+  }
 }
