--- a/src/app/dynamic-form/components/form-timeline/form-timeline.component.scss
+++ b/src/app/dynamic-form/components/form-timeline/form-timeline.component.scss
@@ -125,51 +125,6 @@
 
   }
 
-  .info-block {
-    padding: 12px 16px;
-
-    text-align: left;
-
-    h6 {
-      font-size: 12px;
-      line-height: 16px;
-    }
-
-    ul {
-      margin: 0;
-      padding: 0;
-    }
-
-    li {
-      position: relative;
-
-      padding-left: 16px;
-
-      font-size: 12px;
-      line-height: 14px;
-
-      list-style: none;
-
-      color: rgba($gray, .7);
-    }
-
-    .icon {
-      position: absolute;
-      top: 4px;
-      left: 5px;
-
-      font-size: 6px !important;
-
-      color: $brand-primary;
-
-      @each $item in $themes {
-        .#{$item}-theme & {
-          color: map-get($theme-colors, $item);
-        }
-      }
-    }
-  }
-
   button i {
     line-height: 14px;
   }
